--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "root": true,
   "env": {
-    "es2020": true,
+    "es2021": true,
     "jasmine": true,
     "jest": true,
     "node": true
@@ -11,7 +11,8 @@
     "ecmaVersion": 2021,
     "ecmaFeatures": {
       "impliedStrict": true
-    }
+    },
+    "project": "./tsconfig.json"
   },
   "settings": {
     "noInlineConfig": true
@@ -20,6 +21,7 @@
     "eslint:recommended",
     "plugin:node/recommended",
     "airbnb-base",
+    "airbnb-typescript/base",
     "prettier"
   ],
   "rules": {
