--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "src/server.js",
   "scripts": {
     "build": "tsc -p tsconfig.json && node dist/server.js",
-    "start": "nodemon --watch './**/*.ts' --exec 'ts-node' src/server.ts",
+    "start": "nodemon src/server.ts",
     "lint": "eslint --ext .ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
