--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,20 @@ services:
       - ${PORT}:${PORT}
     depends_on:
       - postgres
+    environment:
+      - PORT=${PORT}
+    volumes:
+      - ./src:/app/src
     restart: always
   postgres:
     build: ./database
+    container_name: nodejs2021Q4-postgres
+    volumes:
+      - "dbdata:/var/lib/postgresql/data"
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: mysecretpassword
 
+volumes:
+  mydata:
+  dbdata:
