--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "dotenv": "10.0.0",
     "fastify": "^3.24.1",
     "fastify-swagger": "^4.12.6",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.41",
     "uuid": "8.3.2",
     "yamljs": "0.3.0"
   },
@@ -63,12 +66,15 @@
     "eslint": "8.2.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "11.1.0",
     "husky": "^4.3.8",
     "jest": "27.3.1",
     "lint-staged": "12.0.3",
+    "nodemon": "2.0.15",
     "pino-pretty": "^7.3.0",
+    "prettier": "2.4.1",
     "supertest": "6.1.6",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
