--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,21 @@
 version: '3.9'
 services:
+  postgres:
+    image: postgres:14.1-alpine
+    container_name: nodejs2021Q4-postgres
+    volumes:
+      - db:/var/lib/postgresql/data
+    restart: always
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
+    networks:
+      - app-network
   app:
     build: .
     container_name: nodejs2021Q4-service
@@ -7,20 +23,23 @@ services:
       - ${PORT}:${PORT}
     depends_on:
       - postgres
-    environment:
-      - PORT=${PORT}
     volumes:
       - ./src:/app/src
+      - ./LOG:/app/LOG
     restart: always
-  postgres:
-    build: ./database
-    container_name: nodejs2021Q4-postgres
-    volumes:
-      - "dbdata:/var/lib/postgresql/data"
+    networks:
+      - app-network
+  adminer:
+    image: adminer
     restart: always
-    environment:
-      POSTGRES_PASSWORD: mysecretpassword
-
+    ports:
+      - 8080:8080
+    networks:
+      - app-network
 volumes:
   mydata:
-  dbdata:
+  db:
+    driver: local
+networks:
+  app-network:
+    driver: bridge
