feat: add bcryptjs to hash password

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 NODE_ENV=development
 PORT=4000
 AUTH_MODE=false
+SALT=10
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_PORT=5432
-# TypeORM
+#
 
