--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-env": "7.0.3",
     "dotenv": "10.0.0",
     "fastify": "^3.24.1",
+    "fastify-jwt": "^4.1.3",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^4.12.6",
     "pg": "^8.7.1",
