--- a/package.json
+++ b/package.json
@@ -1,32 +1,61 @@
 {
-  "name": "rs-rest-service-starter",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "type": "commonjs",
-  "description": "REST service starter for RS School",
-  "main": "src/server.js",
+  "name": "nest-testtt",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "build": "tsc -p tsconfig.json && node dist/server.js",
-    "start": "ts-node-dev src/server.ts",
-    "lint": "eslint --ext .ts --fix src/",
-    "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
-    "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "./node_modules/.bin/eslint --ext .ts --fix src/",
+    "test": "./node_modules/.bin/cross-env DEBUG=rs:* jest --testMatch \\\"<rootDir>/test/e2e/test/*.test.js\\\" --noStackTrace --runInBand",
+    "test:auth": "./node_modules/.bin/cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
   },
-  "keywords": [
-    "rs",
-    "school",
-    "rest",
-    "node",
-    "fastify",
-    "autotest",
-    "starter"
-  ],
-  "license": "ISC",
-  "engines": {
-    "node": ">=16.0.0 <17"
+  "dependencies": {
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.6",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.3",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.41"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "27.0.2",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.2.5",
+    "husky": "^4.3.8",
+    "lint-staged": "12.0.3",
+    "chai": "4.3.4",
+    "debug": "4.3.2",
+    "dirty-chai": "2.0.1",
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "testEnvironment": "node",
@@ -43,45 +72,5 @@
     "src/**/*.ts": [
       "npm run lint"
     ]
-  },
-  "dependencies": {
-    "@types/uuid": "^8.3.3",
-    "bcryptjs": "^2.4.3",
-    "cross-env": "7.0.3",
-    "dotenv": "10.0.0",
-    "fastify": "^3.24.1",
-    "fastify-jwt": "^4.1.3",
-    "fastify-plugin": "^3.0.0",
-    "fastify-swagger": "^4.12.6",
-    "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.41",
-    "uuid": "8.3.2",
-    "yamljs": "0.3.0"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "chai": "4.3.4",
-    "debug": "4.3.2",
-    "dirty-chai": "2.0.1",
-    "eslint": "8.2.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-node": "11.1.0",
-    "husky": "^4.3.8",
-    "jest": "27.3.1",
-    "lint-staged": "12.0.3",
-    "nodemon": "2.0.15",
-    "pino-pretty": "^7.3.0",
-    "prettier": "2.4.1",
-    "supertest": "6.1.6",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
   }
 }
